src/main/java/org/example/exceptions/InvalidInput/InvalidInput.java
package org.example.exceptions.InvalidInput;

public class InvalidInput extends Exception {

    public InvalidInput(String message) {
        super("invalid Input _ "+message);
    }
}
